--- a/src/components/GalleryComponents/section.module.css
+++ b/src/components/GalleryComponents/section.module.css
@@ -50,8 +50,8 @@
 }
 
 .thumbnail {
-  width: 100%;
-  height: 400px;
+  width: 100% !important;
+  height: 400px !important;
   object-fit: cover;
   border-radius: 12px;
   transition: all 0.3s ease;
