--- a/src/components/ContactComponents/contactus.module.css
+++ b/src/components/ContactComponents/contactus.module.css
@@ -99,6 +99,12 @@
   box-shadow: 0 4px 15px #0099cccc;
 }
 
+.h2 {
+    position: relative;
+    top: 15px;
+    font-size: 80%;
+    text-align: center;
+}
 
 .feedback_container {
     padding: 70px;
