--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,26 @@ img {
     -moz-user-select: none;    /* For Firefox */
     -ms-user-select: none;     /* For Internet Explorer/Edge */
 }
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: white; /* or any background */
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 5px solid #ccc;
+  border-top: 5px solid #000;
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
