--- a/src/components/herosection.module.css
+++ b/src/components/herosection.module.css
@@ -38,6 +38,8 @@
 .buttonsBox {
   display: flex;
   margin-top: 50px;
+  margin-left: 20px;
+  margin-right: 20px;
   gap: 10px;
   transform: scale(1.2);
 }
