--- a/src/components/herosection.module.css
+++ b/src/components/herosection.module.css
@@ -37,6 +37,8 @@
 
 .buttonsBox {
   display: flex;
+  justify-content: center;
+  gap: 50px;
   margin-top: 50px;
   margin-left: 20px;
   margin-right: 20px;
@@ -51,21 +53,51 @@
   border: none;
   cursor: pointer;
   border-radius: 50px;
+  z-index: 1;
 }
 
 .span {
+    position: relative;
     color: black;
     font-weight: 700;
+    z-index: 3;
+    transition: all 0.3s ease;
 }
 
-.ourInventory {
+.ourServices {
   color: white;
   background-color: white;
   transition: all 0.3s ease;
+  width: 150px;
 }
 
-.ourInventory:hover {
-  background-color: gold;
+@media (max-width: 432px) {
+    .ourServices {
+        width: auto;
+    }
+}
+
+.ourServices::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, #ff6a00, #ee0979); /* your gradient */
+  opacity: 0;
+  transition: opacity 0.4s ease;
+  border-radius: 50px;
+  z-index: 2;
+}
+
+.ourServices:hover::before {
+  opacity: 1;
+}
+
+
+.ourServices:hover .span {
+  color: white;
 }
 
 .learnMore {
