--- a/src/components/herosection.module.css
+++ b/src/components/herosection.module.css
@@ -84,16 +84,34 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, #ff6a00, #ee0979); /* your gradient */
+  background: linear-gradient(var(--angle), #ff6a00, #ee0979); /* your gradient */
   opacity: 0;
   transition: opacity 0.4s ease;
   border-radius: 50px;
   z-index: 2;
+  animation: spin 5s linear infinite;
 }
 
 .ourServices:hover::before {
   opacity: 1;
+  box-shadow: 0px 0px 20px 5px black;
 }
+
+@keyframes spin {
+    from {
+        --angle: 0deg;
+    }
+    to {
+        --angle: 360deg;
+    }
+}
+
+@property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
 
 
 .ourServices:hover .span {
@@ -107,6 +125,7 @@
 }
 
 .learnMore:hover {
+  box-shadow: 0px 0px 20px black;
   background-color: gold;
 }
 
