--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,4 +1,17 @@
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .header {
+    opacity: 0;
+    transform: translateY(-20px);
     position: fixed;
     margin-top: 0 !important;
     width: 100%;
@@ -7,6 +20,8 @@
     backdrop-filter: blur(10px);    
     height: 120px;
     z-index: 998;
+    animation: fadeIn 1s ease forwards;
+    animation-delay: 0.2s;
 }
 
 .headerLeft {
