--- a/src/components/herosection.module.css
+++ b/src/components/herosection.module.css
@@ -1,3 +1,20 @@
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.herosectionDiv {
+    opacity: 1;
+    transform: scale(0.8);
+    animation: fadeIn 1s ease forwards;
+}
+
 .overlay {
     position: absolute;
     top: 0;
