changing to webpack to avoid many errors

--- a/src/components/AboutUsComponents/section1.module.css
+++ b/src/components/AboutUsComponents/section1.module.css
@@ -51,6 +51,7 @@
     font-size: 190%;
     padding: 5px;
     margin: 0;
+    color: black;
 }
 
 .tintText {
@@ -64,4 +65,5 @@
 .aboutUsDescription {
     font-weight: 700;
     padding: 10px;
+    color: black;
 }
