--- a/src/components/AboutUsComponents/section2.module.css
+++ b/src/components/AboutUsComponents/section2.module.css
@@ -34,7 +34,7 @@
     text-align: center;
     transition: all 0.5s ease;
     margin-bottom: 40px;
-    color: #000;
+    color: black;
 }
 
 .ourAdvantagesTextSlideIn {
