--- a/src/components/GalleryComponents/section.module.css
+++ b/src/components/GalleryComponents/section.module.css
@@ -22,6 +22,7 @@
     margin-top: 130px;
     animation: animation 1s ease-in-out forwards; /* 👈 add fade-in animation */
     animation-delay: 0.2s;
+    color: black;
 }
 
 .galleryGrid {
